# ubmachinery

./: LICENSE  README.md  requiremets.txt  setup.cfg
ubmachinery/: .gitignore  Siver_Machine.py  Specific_Machine.py  config.py  main.py
ubmachinery/ublib/: Costumer_Machine.py  Machine.py  ModBus_Machine.py  OpcUa_Machine.py  Snap7_Machine.py  __init__.py  modbus_connection.py  opcua_connection.py  plc_connection.py  sql_connection.py
ubmachinery/ublib/models/: AnalisiMacchinario.py  CommesseMacchinario.py  DatiMacchinario.py  test.py
