[metadata]
# replace with your username:
name = ubmachinery
version = 0.0.1
author = Chicco94
author_email = enrico.cominato@gmail.com
description = Easy connection with most common machines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Chicco94/ubmachinery
project_urls =
    Bug Tracker = https://github.com/Chicco94/ubmachinery/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6